<resources>
    <string name="app_name">Go/No-Go</string>
    <string name="map">Map</string>
    <string name="live_stream">Live Stream</string>
    <string name="subscribe_for_notification">Subscribe for notification</string>
    <string name="mission_details">Mission Details</string>
    <string name="type">Type: %1$s</string>
    <string name="probability">Probability: %1$s</string>
    <string name="window_end">Window end: %1$s</string>
    <string name="window_start">Window Start: %1$s</string>
    <string name="mission_provider">Launch Provider: %1$s</string>
    <string name="details_launch_pad">launch Pad: %1$s</string>
    <string name="rocket_image">Rocket Image</string>
    <string name="logo">Logo</string>
    <string name="manifest">Manifest</string>
    <string name="launch_pads">Pads</string>
    <string name="settings">Settings</string>
    <string name="description">Description</string>
    <string name="subscribed">Subscribed</string>


    <string-array name="notif_list_preference">
        <item>15 Minutes</item>
        <item>30 Minutes</item>
        <item>60 Minutes</item>
    </string-array>
    <string-array name="notif_values_list_preference">
        <item>15</item>
        <item>30</item>
        <item>60</item>
    </string-array>

    <string name="view_businesses">View Businesses</string>
    <string name="apply_for_business_account">Apply for business account</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in">Sign In</string>

    <string name="business_number">Phone Number: %1$s</string>
    <string name="business_address">Address: %1$s</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_number">This phone number is invalid</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_address">This address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>

    <string name="name">Name</string>
    <string name="register">Register</string>

    <string name="unknown_location">Unknown Location</string>

    <string name="open">open</string>
    <string name="close">close</string>
    <string name="to">to</string>
    <string name="active_launch">LIVE</string>
    <string name="explore_your_surroundings">Explore Your Surroundings</string>
    <string name="welcome_to_the_launch_pad_locatorlook_around_to_view_the_launch_pad_s_that_are_near_you_you_can_click_on_a_launch_pad_to_get_the_name_of_the_pad">Look around to discover the launch pad(s) around you. You can click on a launch pad to get the name of the pad.</string>

    <string name="photos">Photos</string>
    <string name="location">Location:</string>
    <string name="launch_name">Launch Name:</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_image_preview">Your Image Preview</string>
    <string name="thumbs_up">Thumbs up</string>
    <string name="live_image">Live Image</string>
    <string name="go_no_go_logo">Go/No-Go Logo</string>
    <string name="image">Image</string>
    <string name="please_only_post_images_of_or_from_rocket_launches_all_images_not_envoling_rockets_may_be_removed">Please only post images of or from rocket launches. All images not envoling rockets may be removed.</string>
    <string name="photo_capture_location_hint">City, State</string>
    <string name="upload_image">upload image</string>
    <string name="account_needed">ACCOUNT NEEDED</string>
    <string name="you_have_to_be_signed_in_to_view_or_add_photos_from_your_favorite_rocket_launches_click_the_button_bellow_to_sign_in_and_start_adding_to_the_community">You have to be signed in to view or add photos from your favorite rocket launches. Click the button bellow to sign in and start adding to the community.</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="re_type_new_password">Re-type New Password</string>
    <string name="save">Save</string>
    <string name="report">Report</string>
    <string name="forgot_password">Forgot Password?</string>
</resources>
